--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Marcela Silva</title>
+        <style>
+            h1{
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            p{
+                font-family:monospace ;
+                font-style: normal;
+            }
+            body{
+                background-color: rgb(195, 219,233)
+            }
+        </style>
     </head>
     <body>
         <h1><strong>Hi, I'm Marcela Silva</strong></h1>
