mudança tamanho da fonte dos elementos da lista

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
             body{
                 background-color: rgb(195, 219,233)
             }
+            .list-size1{
+                font-size:large;
+            }
+            .list-size2{
+                font-size:medium;
+            }
+            .list-size3{
+                font-size: small;
+            }
         </style>
     </head>
     <body>
@@ -25,9 +34,9 @@
         <br>
         <h3>Skills</h3>
         <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>And baking a bread :P</li>
+            <li class="list-size1">HTML</li>
+            <li class="list-size2">CSS</li>
+            <li class="list-size3">And baking a bread :P</li>
         </ul>
         <br>
         <p>This is where a study Web Developer</p><a href="https://www.betrybe.com/" target="_blank">Trybe</a>
