começando a mexer p add flexbox

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div>
+        <header>
             <h1><strong>Hi, I'm Marcela Silva</strong></h1>
-        </div>
+        </header>
         
         <h3 id="sub-titulo"><em>Full Stack Web Developer student</em></h3>
         
